Bug 32338 - [WIKIHELP]: Missing context sensitive Help
Summary: [WIKIHELP]: Missing context sensitive Help
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
3.3.0 RC1
Hardware: All All
: high normal
Assignee: Jan Holesovsky
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 31865
  Show dependency treegraph
 
Reported: 2010-12-12 08:26 UTC by Rainer Bielefeld Retired
Modified: 2011-01-12 06:53 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Fix for the problem (2.48 KB, patch)
2010-12-15 14:15 UTC, Jan Holesovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2010-12-12 08:26:47 UTC
I see that with  "LibreOffice 3.3.0 RC1 - WIN XP English UI  [OOO330m17 (build 3.3.0.1)]": Clicking a HELP button always lead to HELP start page, not to the specific Help contents.

Steps to reproduce:
1. open new CALC document
2. Click Function Wizard symbol 'F(x)' t insert a function
   Function wizard dialog appears
3. Select function "AVERAGE"
   Short summary concerning "AVERAGE" appears in the dialog
4. Press <Help> button in dialog
   expected: Help concerning function "AVERAGE" should appear
   actual: CALC Help start page appears

I believe that's not new for you, but I did not find this on
<http://wiki.documentfoundation.org/Documentation/Produce>
For a stable release that would be no "modern" solution, I see that as a blocker for the final releas.

Wikihelp or UI problem? I can't tell.
Comment 1 Jan Holesovsky 2010-12-13 09:15:34 UTC
Rainer: Thank you for the report, this is not a known issue :-(  Looking into it.
Comment 2 Jan Holesovsky 2010-12-15 10:44:36 UTC
Got the reason, now how to fix it best ;-)

BOOL SfxHelp::Start( ULONG nHelpId, const Window* pWindow )

in sfx2/source/appl/sfxhelp.cxx, the while() loop starting at line 881.  This fallbacks to the start page when the help is not installed.
Comment 3 Jan Holesovsky 2010-12-15 14:15:45 UTC
Created attachment 41157 [details]
Fix for the problem

This should fix that; sent to the ML for review.
Comment 4 Jan Holesovsky 2010-12-16 08:55:21 UTC
Fixed in the libreoffice-3-3 branch, as commit 55abe868d44218c0af7e55fb83a11d07ecb01894 in libs-core.
Comment 5 sophie 2011-01-12 06:53:00 UTC
Verified - Closed - Sophie