wikihelp: Use the right Help ID URL, fdo#32338.

The offline help has a fallback mechanism that (for non-existing Help IDs)
tries to traverse the parent windows to find at least something.  This is not
desired in the case of on-line help, because there we can easily define new
redirects, without recompiling LibreOffice.

Signed-off-by: David Tardon <dtardon@redhat.com>